[project]
name = "couchdb3"
version = "2.0.1"
description = "A wrapper around the CouchDB API."
authors = [
    {name = "Nikolai Vlahovic",email = "vlahovic.nikolai@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[project.urls]
Homepage = "https://github.com/N-Vlahovic/couchdb3"
Documentation = "https://n-vlahovic.github.io/couchdb3/"
Repository = "https://github.com/N-Vlahovic/couchdb3.git"
Issues = "https://github.com/N-Vlahovic/couchdb3/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
