[project]
name = "couchdb3"
version = "3.0.0"
description = "A wrapper around the CouchDB API."
authors = [{ name = "Nikolai Vlahovic", email = "vlahovic.nikolai@gmail.com" }]
requires-python = ">= 3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["requests (>=2.32.4,<3.0.0)"]

[project.urls]
Homepage = "https://github.com/N-Vlahovic/couchdb3"
Documentation = "https://n-vlahovic.github.io/couchdb3/"
Repository = "https://github.com/N-Vlahovic/couchdb3.git"
Issues = "https://github.com/N-Vlahovic/couchdb3/issues"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
